fix(frontend): fix property not supported on firefox esr and big dropdown button

--- a/frontend/src/css/Workspace.styl
+++ b/frontend/src/css/Workspace.styl
@@ -23,6 +23,9 @@
       flex 1
       flex-direction column
 
+      & > .dropdown
+        height unset
+
 // MEDIAQUERIES
 
 @media (min-width: min-md) and (max-width: max-md)
